--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lekton&display=swap" rel="stylesheet">
 
-
     <link rel="stylesheet" href="./style.css">
+
     <script defer src="app.js"></script>
+    <script defer src="components/about.js"></script>
+
+
     <title>My Website</title>
 </head>
 
@@ -46,32 +49,10 @@
 
         <div class="right-pane">
             <section>
-                <h2>ABOUT</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae commodi unde fugiat ratione id officiis, voluptas minima quis cupiditate blanditiis, incidunt,
-                    ducimus
-                    eaque tenetur! Officia officiis cumque voluptatum praesentium voluptatibus.</p>
-                <h2>PROJECTS</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae commodi unde fugiat ratione id officiis, voluptas minima quis cupiditate blanditiis, incidunt,
-                    ducimus
-                    eaque tenetur! Officia officiis cumque voluptatum praesentium voluptatibus.</p>
-                <h2>CONTACT</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae commodi unde fugiat ratione id officiis, voluptas minima quis cupiditate blanditiis, incidunt,
-                    ducimus
-                    eaque tenetur! Officia officiis cumque voluptatum praesentium voluptatibus.</p>
-                <h2>WHO AM I</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae commodi unde fugiat ratione id officiis, voluptas minima quis cupiditate blanditiis, incidunt,
-                    ducimus
-                    eaque tenetur! Officia officiis cumque voluptatum praesentium voluptatibus.</p>
-                <h2>WHO AM I</h2>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae commodi unde fugiat ratione id officiis, voluptas minima quis cupiditate blanditiis, incidunt,
-                    ducimus
-                    eaque tenetur! Officia officiis cumque voluptatum praesentium voluptatibus.</p>
+                <about-component></about-component>
             </section>
         </div>
     </div>
-    <!-- <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-    <lottie-player src="https://assets2.lottiefiles.com/private_files/lf30_gfVFlN.json" background="transparent" speed="1" style="width: 400px; height: 500px;" loop autoplay>
-    </lottie-player> -->
 
 </body>
 
