added project card component, but how to render multiple?

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lekton&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/style.css">
 
-    <script defer src="app.js"></script>
+    <script defer src="render-components.js"></script>
     <script defer src="components/about.js"></script>
+    <script defer src="components/projectCard.js"></script>
 
 
     <title>My Website</title>
